Fixed: --- Overscroll in ion-list in Home page bug on Ios. This resulted in completely reworking  the list item layout using nested ion-item instead of ion-card. The change led to overal improvement in scrolling performance and responsivness. However, to accomodate the variable size of thumbnail, while the images are loading the list is squashed, probably can be solved by animating image inflation

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -13,7 +13,10 @@
         .cardAuthorButtonSize{
             max-height: 7vw !important;
         }
-        
+        .bottombarPosition{
+            margin-bottom: 0.3%;
+           
+        }
 	}	
 }
 
@@ -32,6 +35,7 @@
         .cardAuthorButtonSize{
             max-height: 6vw !important;
         }
+       
     }
     
 }
@@ -65,7 +69,8 @@ page-home {
         }    
 
     .listMargin {
-        margin-right: -16px;
+        margin-right: 1%;
+        margin-left: 1%;
         }
 
     .background{
@@ -160,5 +165,21 @@ page-home {
     font-size: 3vw;
     width: 30%;
 }
+
+.label{
+    margin-right:0px;
+    margin-top:0px;
+    margin-bottom:0px;
+}
+
+  .item-inner{
+      padding:0;
+      padding-right: 0px !important;
+  }
+
+  .cardStyler{
+      border-radius: 4px;
+  }
+  
 
 }
